Drop lando as a dev dependency

--- a/package.json
+++ b/package.json
@@ -2,8 +2,5 @@
   "name": "lando-plugin-magento-recipe",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
-  "devDependencies": {
-    "lando": "lando/lando"
-  }
+  "license": "MIT"
 }
